--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "http-proxy-middleware": "^2.0.6",
+    "proshop-v2": "file:..",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
